buttons & funky json

--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CART 211 Final</title>
-    <link rel="stylesheet" href="index.css">
+    <title>Basic Text Adventure</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="main.js"></script>
 </head>
 <body>
-<h3>Cart 211 Final</h3>
+<h3>Basic Text Adventure</h3>
+
+
+<p id="prompt">You are given two options.</p>
+<button id="one" type="button" class="dialogue" onclick="onClick(this.id)">Option One</button>
+<button id="two" type="button" class="dialogue" onclick="onClick(this.id)">Option Two</button>
 
 </body>
 </html>
