--- a/index.html
+++ b/index.html
@@ -2,17 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Basic Text Adventure</title>
+    <title>Randolph's Radios</title>
     <link rel="stylesheet" href="style.css">
     <script src="main.js"></script>
 </head>
 <body>
-<h3>Basic Text Adventure</h3>
+<img class="background" src="img/background.png" alt="blue background">
 
+<div class="interaction">
+    <p id="prompt">Choose an option!</p>
+    <button id="one" type="button" class="dialogue_btn" onclick="onClick(this.id)">Option One</button>
+    <button id="two" type="button" class="dialogue_btn" onclick="onClick(this.id)">Option Two</button>
+</div>
 
-<p id="prompt">You are given two options.</p>
-<button id="one" type="button" class="dialogue" onclick="onClick(this.id)">Option One</button>
-<button id="two" type="button" class="dialogue" onclick="onClick(this.id)">Option Two</button>
+<div class="randolph">
+    <img style="position:absolute;" src="img/rock1.png" alt="rock drawing">
+    <button id="randolph" type="button" class="randolph_btn" onclick="onClick(this.id)">Randolph</button>
+</div>
+
+<div class="message">
+    <p>Welcome back.</p>
+</div>
 
 </body>
 </html>
