--- a/index.html
+++ b/index.html
@@ -9,19 +9,18 @@
 <body>
 <img class="background" src="img/background.png" alt="blue background">
 
-<div class="interaction">
-    <p id="prompt">Choose an option!</p>
-    <button id="one" type="button" class="dialogue_btn" onclick="onClick(this.id)">Option One</button>
-    <button id="two" type="button" class="dialogue_btn" onclick="onClick(this.id)">Option Two</button>
+<div class="textBox" id="textBox">
+    <p id="text"></p>
+    <button id="one" type="button" class="dialogue_btn" onclick="onClick(this.id)">Yeah!</button>
+    <button id="two" type="button" class="dialogue_btn" onclick="onClick(this.id)">No thanks.</button>
 </div>
 
 <div class="randolph">
-    <img style="position:absolute;" src="img/rock1.png" alt="rock drawing">
-    <button id="randolph" type="button" class="randolph_btn" onclick="onClick(this.id)">Randolph</button>
+    <button id="randolph" type="button" class="randolph_btn" onclick="onClick(this.id)"></button>
 </div>
 
-<div class="message">
-    <p>Welcome back.</p>
+<!--<div class="message">-->
+<!--    <p>Welcome back.</p>-->
 </div>
 
 </body>
