--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <script src="main.js"></script>
 </head>
 <body>
-<img class="background" src="img/background.png" alt="blue background">
 
 <div class="textBox" id="textBox">
     <p id="text"></p>
@@ -16,12 +15,12 @@
 </div>
 
 <div class="randolph">
+    <img class="background" src="img/background.png" alt="blue background">
     <button id="randolph" type="button" class="randolph_btn" onclick="onClick(this.id)"></button>
 </div>
 
 <!--<div class="message">-->
 <!--    <p>Welcome back.</p>-->
-</div>
+<!--</div>-->
 
 </body>
-</html>
