--- a/index.html
+++ b/index.html
@@ -13,14 +13,10 @@
     <button id="one" type="button" class="dialogue_btn" onclick="onClick(this.id)">Yeah!</button>
     <button id="two" type="button" class="dialogue_btn" onclick="onClick(this.id)">No thanks.</button>
 </div>
-
 <div class="randolph">
     <img class="background" src="img/background.png" alt="blue background">
     <button id="randolph" type="button" class="randolph_btn" onclick="onClick(this.id)"></button>
+
 </div>
-
-<!--<div class="message">-->
-<!--    <p>Welcome back.</p>-->
-<!--</div>-->
-
+<button id="radio" type="button" class="radio_btn" onclick="onClick(this.id)"></button>
 </body>
